--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <form id="userUpdateForm">
             <label for="inpUserNameUpdate" class="client-label">Bruger</label>
             <input id="inpUserNameUpdate" class="client-input" type="text" placeholder="indtast brugernavn" required/>
+            <label for="inpUserNameNewUpdate" class="client-label">Nyt Brugernavn</label>
+            <input id="inpUserNameNewUpdate" class="client-input" type="text" placeholder="indtast nyt brugernavn" required/>
             <label for="inpUserImageUpdate" class="client-label">Billede</label>
             <input id="inpUserImageUpdate" class="" type="file" required/>
             <br/><br/>
